# FuzzyRusty

./: Cargo.toml  README.md  generate_coverage.sh
findings/: merkleization.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: basic_roundtrip.rs  merkleization.rs  roundtrip_mutator.rs  simple_node_mutator.rs
